--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "openai": "^4.54.0"
+    "openai": "^4.54.0",
+    "remove-markdown": "^0.5.2"
   }
 }
